--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,105 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+body{
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 2%;
+	
+}
+header{
+	text-align: center;
+	margin-bottom: 5%;
+}
+nav{
+	display: inline-block;
+}
+nav a{
+	display: inline;
+	margin-right: 40px;
+	color: grey;
+	text-decoration: none;
+}
+
+
+.Innovation{
+	display: block;
+	position: relative;
+	border-bottom: 1px solid black;
+	
+}
+
+.mainText {
+	display: inline-block;
+	padding-bottom: 75px;
+	text-align: center;
+	position: relative;
+	bottom: 20px;
+	right: -110px;
+	font-size: 75px;
+}
+
+.mainText h1 {
+	display: block;
+	
+}
+.mainText button {
+	display: inline-block;
+	font-size: 18px;
+	border: 1px solid black;
+	background-color: white;
+	padding: 5px 30px;
+}
+ img {
+	 display: inline-block;
+ }
+ .Innovation img{
+	 position: relative;
+	 right: -150px;
+ }
+ .Content1{
+	 display: block;
+	 margin-top: 35px;
+	 margin-bottom: 35px;
+ }
+.firstPar{
+	display: inline-block;
+	width: 45%;
+}
+.secondPar{
+	display: inline-block;
+	width: 45%;
+	text-align: left;
+}
+
+.Content2{
+	display: block;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	padding-bottom: 40px;
+	border-bottom: 1px solid black;
+	
+}
+
+.services{
+	display: inline-block;
+	width: 30%;
+	padding-right: 10px;
+	
+}
+.product{
+	display: inline-block;
+	width: 30%;
+	padding-right: 10px;
+	
+}
+.vision{
+	display: inline-block;
+	width: 30%;
+}
+footer{
+	text-align: center;
+	padding-top: 40px;
+	padding-bottom: 25px;
+}
+
